# tts_hw

./: .gitignore  Dockerfile  README.md  download_best_model.sh  install_script.sh  pyproject.toml  test.py  test_texts.json  train.py
default_test_model/: config.json
hw_asr/augmentations/spectrogram_augmentations/: __init__.py
hw_asr/augmentations/wave_augmentations/: __init__.py
hw_asr/collate_fn/: collate.py
hw_asr/configs/: deepspeech2.json  deepspeech2_1000.json  deepspeech2_LM.json  deepspeech2_SGD.json  demonstration.json  one_batch_test.json  one_batch_test_deepspeech2.json
hw_asr/metric/: __init__.py  cer_metric.py  utils.py  wer_metric.py
hw_asr/model/: deepspeech2.py
hw_asr/text_encoder/: __init__.py  ctc_char_text_encoder.py
hw_asr/trainer/: trainer.py
scripts/: download.sh  download_best_model.sh  download_dataset.sh  download_results.sh  extract_pitch_and_energy.py
src/: config.json  config.yaml
src/augmentations/: __init__.py
src/base/: __init__.py  base_dataset.py  base_trainer.py
src/collate_fn/: collate.py
src/datasets/: __init__.py  librispeech_dataset.py  ljspeech_dataset.py
src/logger/: wandb.py
src/loss/: FastSpeech2Loss.py  __init__.py
src/metric/: __init__.py  cer_metric.py  wer_metric.py
src/model/: __init__.py  deepspeech2.py
src/model/fast_speech_2/: FastSpeech2.py  (+3 more)
src/tests/: test_dataloader.py  test_text_encoder.py
src/text/: __init__.py  cleaners.py  symbols.py
src/text_encoder/: ctc_char_text_encoder.py
src/trainer/: trainer.py
src/utils/: object_loading.py  parse_config.py  util.py  waveglow.py
(+4 files in other folders)
